[package]
name = "binary-option"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { git = "https://github.com/anza-xyz/agave.git", branch = "master" }
thiserror = "1.0"
spl-token = { version = "4.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
arrayref = "0.3.7"
borsh = "1.2.1"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
